# src/routes/records.ts
@@ -33,7 +33,7 @@ app.get(
     errorHandler.wrap(req => {
         const { limit, skip, userEmail, filter } = req.query;
         const { authUserEmail, authUserRole } = extractUserRoleFromAccessToken(req.get("Authorization")!);
-        return new RecordManager(authUserEmail, authUserRole).getAll(userEmail, limit, skip, filter);
+        return new RecordManager(authUserEmail, authUserRole).getAll({ userEmail, limit, skip, filter });
     })
 );
 
@@ -48,7 +48,7 @@ app.get(
     errorHandler.wrap(req => {
         const { id } = req.params;
         const { authUserEmail, authUserRole } = extractUserRoleFromAccessToken(req.get("Authorization")!);
-        return new RecordManager(authUserEmail, authUserRole).get(id);
+        return new RecordManager(authUserEmail, authUserRole).get({ id });
     })
 );
 
@@ -80,7 +80,7 @@ app.delete(
     errorHandler.wrap(req => {
         const { id } = req.params;
         const { authUserEmail, authUserRole } = extractUserRoleFromAccessToken(req.get("Authorization")!);
-        return new RecordManager(authUserEmail, authUserRole).delete(id);
+        return new RecordManager(authUserEmail, authUserRole).delete({ id });
     })
 );
 
